fix(persistence): sync world snapshots from commands